Fix radio button alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,8 +275,7 @@ iframe {
 }
 
 .radio_pets {
-    margin-right: 25px;
-    margin-left: 10px;
+    margin: 0 10px;
 }
 
 #comment-field {
